fix: update about me

--- a/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_page/about.ejs
@@ -9,10 +9,13 @@
 			<strong class="title">一个有趣的灵魂<span> <font aria-hidden="true" tabindex="0">/ About Me</font></span></strong>
 			<div>
 				<a class="site-avatar" href="<%- url_for(theme.imgs.avatar) %>"><img src="<%- url_for(theme.imgs.avatar150) %>" height="100" width="100" alt="<%- config.author %>"></a>
-				<p>My name is Lee Jing(李靖). You can call me Barret. I was born in 1992.</p>
-				<p>I am a Bachelor of Engineering, graduated from HuaZhong University Of Science and Technology, and now am employed by Alibaba in HangZhou.</p>
-				<p>Life is colorful, this website was, is and will be the window which used to present the color of my life.</p>
-				<p>I like programming, reading book, surfing internet, traveling, and I love making friends very much. </p>
+				<p>My name is Lee Jing (李靖), but you can call me Barret. I was born in 1992.</p>
+
+				<p>I hold a Bachelor of Engineering degree from HuaZhong University of Science and Technology and currently work for Alibaba in HangZhou.</p>
+
+				<p>To me, life is a colorful adventure. This website is a window into the vibrant and diverse experiences that shape my life.</p>
+
+				<p>In my free time, I enjoy programming, reading books, surfing the internet, and traveling. Most of all, I love meeting new people and making friends.</p>
 			</div>
 			<strong class="title">关于内容<span> <font aria-hidden="true" tabindex="0">/ About The Website</font></span></strong>
 			<div>
@@ -23,7 +26,7 @@
 			<strong class="title">订阅地址<span> <font aria-hidden="true" tabindex="0">/ The RSS Address</font></span></strong>
 			<div>
 				<p>本网站 RSS 订阅地址： <a href="<%- config.url %><%- url_for(theme.pages.feed) %>"><%- config.url %><%- url_for(theme.pages.feed) %></a></p>
-				<p>博客源码：<a href="https://github.com/barretlee/blog" target="_blank">https://github.com/barretlee/blog</a>，本站由 <a href="http://pages.coding.me" target="_blank">Coding</a> & <a href="https://pages.github.com/" target="_blank">Github</a> 强力驱动。</p>
+				<p>博客源码：<a href="https://github.com/barretlee/blog" target="_blank">https://github.com/barretlee/blog</a>，本站由 <a href="https://pages.github.com/" target="_blank">Github Pages</a> 强力驱动。</p>
 			</div>
 			<!-- <strong class="title">关于主题<span> <font aria-hidden="true" tabindex="0">/ About The Theme</font></span></strong>
 			<div>
@@ -37,17 +40,13 @@
 						<a href="<%- theme.social.github %>" target="_blank">@barretlee</a>
 					</li>
 					<li>Social：
-						<a href="<%- theme.social.weibo %>" target="_blank">新浪微博</a> <span class="grey" aria-hidden="true" tabindex="0">|</span>
 						<a href="<%- theme.social.twitter %>" target="_blank">Twitter</a> <span class="grey" aria-hidden="true" tabindex="0">|</span>
-						<a href="<%- theme.social.zhihu %>" target="_blank">知乎</a>
-						<!-- <span class="grey" aria-hidden="true" tabindex="0">|</span>
-						<a href="<%- theme.social.google %>" target="_blank">G+</a> -->
+						<a href="<%- theme.social.weibo %>" target="_blank">微博</a> <span class="grey" aria-hidden="true" tabindex="0">|</span>
+						<a href="<%- theme.social.jike %>" target="_blank">即刻</a> <span class="grey" aria-hidden="true" tabindex="0">|</span>
+						<a href="<%- theme.social.zhihu %>" target="_blank">知乎</a> 
 					</li>
 					<li>E-mail：
 						<a href="mailto:<%- theme.social.mail %>" target="_blank">barret.china(at)gmail.com</a>
-					</li>
-					<li>Old Blog：
-						<a href="<%- theme.social.cnblog %>" target="_blank">Here</a> <span class="grey">- 博客园「推荐博客」</span>
 					</li>
 					<!-- <li>About：
 						<a href="<%- theme.social.about %>" target="_blank">More about me</a>
