--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
@@ -17,7 +17,7 @@
 		<li>版权声明：<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">CC BY-NC-ND 3.0</a></li>
 		<li>
 			Feed 订阅: <a href="<%- theme.pages.feed %>"><i class="icon">&#x25c8;</i></a>
-			<div style="opacity: 0.3; text-align: right; margin: 5px -15px -10px 0; float: right;">
+			<div style="opacity:.3;text-align:right;margin:5px -5px -10px 0;float:right;font-size: 12px;">
 				编辑本文：<a href="<%- theme.source_edit %><%- moment(page.date).format('YYYY-MM-DD') %>-<%- page.slug %>.md" target="_blank" aria-hidden="true"><i class="icon">&#xe622;</i></a>；
 				新建文章：<a href="<%- theme.source_new %>" target="_blank" aria-hidden="true"><i class="icon">&#xe616;</i></a>
 			</div>
