--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/container.styl
@@ -330,9 +330,6 @@ table td, table th {
     }
   }
 }
-.share-article h2 {
-  font-family: Simsun, "Microsoft Yahei";
-}
 .share-article h2 a:hover{
   text-decoration: none;
 }
@@ -405,7 +402,7 @@ table td, table th {
   border-bottom: 1px dashed #CCC;
   padding: 30px 55px;
   background: #F8F8F8;
-  margin-top: 45px;
+  margin-top: 35px;
   position: relative;
   font-size: 14px;
   margin-left: -40px;
@@ -489,9 +486,9 @@ table td, table th {
   font-size 14px;
   margin: 30px auto;
   border-radius: 10px;
-  line-height: 40px;
+  line-height: 38px;
   text-align: center;
-  box-shadow: 3px 3px 5px #555;
+  // box-shadow: 3px 3px 5px #555;
   cursor: pointer;
   background-color: #565656;
   color: #CCC;
