--- a/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_response.styl
@@ -217,6 +217,9 @@
   }
 }
 @media screen and (max-width: 640px) {
+  .copyright {
+    border-radius: 6px;
+  }
   blockquote {
     margin-top: 25px;
     padding: 20px;
