fix: update about me

--- a/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
+++ b/blog/themes/hexo-theme-moustache/source/public/css/_partial/entry.styl
@@ -25,6 +25,7 @@
   height: 352px;
   background: #FAFAFA url("https://img.alicdn.com/imgextra/i4/O1CN01Czgiur21V0xDDZVK1_!!6000000006989-1-tps-1200-1200.gif") center center no-repeat;
   border: 1px solid #CCC;
+  border-radius: 4px;
 }
 .entry-recent-post {
   float: left;
@@ -105,6 +106,7 @@
   border: 1px solid #CCC;
   padding: 15px;
   margin-bottom: 30px;
+  border-radius: 4px;
 }
 .entry-cates h2 {
   margin-top 0;
