--- a/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
@@ -49,4 +49,13 @@ if(page.description) {
   <% if (page.next){ %><link rel="next" href="<%- config.url %><%- url_for(page.next.path) %>" title="<%= page.next.title %>" /><% } %>
   <link rel="start" href="<%- config.url %><%- url_for('entry/') %>" title="Blog Entry" />
   <link rel="stylesheet" href="/public/css/style-20230627-2.css">
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P5XMJGJT');</script>
+<!-- End Google Tag Manager -->
+
 </head>
