--- a/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/header.ejs
@@ -50,12 +50,14 @@ if(page.description) {
   <link rel="start" href="<%- config.url %><%- url_for('entry/') %>" title="Blog Entry" />
   <link rel="stylesheet" href="/public/css/style-20230627-2.css">
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P5XMJGJT');</script>
-<!-- End Google Tag Manager -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-67248043-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-67248043-3');
+</script>
 
 </head>
