--- a/blog/themes/hexo-theme-moustache/layout/layout.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/layout.ejs
@@ -5,22 +5,36 @@
   <%- body %>
 </body>
 <script src="/public/js/jquery.js"></script>
-<script src="/public/js/main-20230626.js"></script>
+<script src="/public/js/main.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-67248043-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-67248043-3');
+</script>
+
+<!-- Baidu Analysis -->
 <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?3524fff9629f2c80f8ea5daa13e67003";
   var s = document.getElementsByTagName("script")[0]; 
+  s.async = true;
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 <script>
   window.onerror = function(e) {
     window.console && window.console.log && window.console.log(e);
-    $('#loadLayer').remove();
+    try {
+      $('#loadLayer').remove();
+    } catch(e) {}
     return true;
   };
-</script>
 </script>
 </html>
