--- a/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/article.ejs
@@ -9,7 +9,7 @@
       </div>
       <div class="post-title-wrapper">
         <h1 class="post-title" itemprop="name"><%= page.title %></h1>
-        <a href="<%- url_for('/about/') %>"><img src="<%- url_for(theme.imgs.avatar) %>" alt="<%- config.author %>" /></a>
+        <a href="<%- url_for('/about/') %>"><img style="max-width:120px" src="<%- url_for(theme.imgs.avatar) %>" alt="<%- config.author %>" /></a>
       </div>
       <div class="post-info">
         <span>作者: <a href="<%- url_for('about/') %>"><%- config.author %></a></span>
