--- a/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
+++ b/blog/themes/hexo-theme-moustache/layout/_partial/post/copyright.ejs
@@ -24,5 +24,5 @@
 		</li>
 		
 	</ul>
-	<a href="<%- url_for('about/') %>"><img src="<%- theme.imgs.avatar150 %>" /></a>
+	<a href="<%- url_for('about/') %>"><img style="max-width:120px" src="<%- theme.imgs.avatar150 %>" /></a>
 </div>
